Secp256k1 support in Go-SDK
